# argh

./: .gitignore  Cargo.toml  architecture.md  makefile  project.md  readme.md  res.txt
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  pages.yml
argh/: Cargo.toml
argh/src/: app.rs  baked_mesh.rs  buffer.rs  camera.rs  colour.rs  core.rs  engine.rs  helpers.rs  instance.rs  lib.rs  light.rs  material.rs  mesh.rs  model.rs  models.rs  primitives.rs  scene.rs  text.rs  texture.rs  vector.rs  vector_test.rs
argh/src/engine/: app_scene.rs  draw2d.rs  input.rs  mod.rs  parse.rs  parse_gltf.rs  parse_obj.rs  render.rs  resources.rs  scene.rs
argh/src/math/: affine2.rs  affine2_tests.rs  matrix3.rs  matrix3_tests.rs  matrix4.rs  matrix4_tests.rs  mod.rs  quat.rs  quat_tests.rs  vector2.rs  vector2_tests.rs  vector3.rs  vector3_tests.rs  vector4.rs  vector4_tests.rs
argh/src/models/: teapot.txt
argh/src/tests/: affine2_tests.rs  baked_mesh_tests.rs  buffer_tests.rs  camera_tests.rs  colour_tests.rs  draw2d_tests.rs  engine_tests.rs  helpers_tests.rs  instance_tests.rs  light_tests.rs  material_tests.rs  math_audit_tests.rs  matrix4_tests.rs  mesh_tests.rs  model_tests.rs  parse_gltf_tests.rs  parse_obj_tests.rs  primitives_tests.rs  quat_tests.rs  scene_tests.rs  test_helpers.rs  texture_tests.rs  vector3_tests.rs  vector4_tests.rs
assets/glft/: scene.glb  scene.gltf  utah_teapot_high.glb  utah_teapot_med.glb
assets/gltf/: duck.glb  utah_teapot_low.glb
assets/models/dice/: dice.mtl
assets/models/hamburger/: hamburger.mtl
assets/models/soda_can/: 14025_Soda_Can_v3_l3.mtl
assets/models/table/: table.mtl
assets/models/wine/: wine.mtl
examples/: readme.md
examples/basic1/: Cargo.toml
examples/basic1/src/: main.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: app.rs  app.rs.simple  main.rs
examples/cube_3d/: Cargo.toml
examples/cube_3d/src/: main.rs
examples/dungeon/: Cargo.toml
examples/dungeon/src/: app.rs  fps_camera.rs  main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/matcrap/: Cargo.toml
examples/matcrap/src/: main.rs
examples/obj_files/: Cargo.toml
examples/obj_files/src/: app.rs  main.rs
examples/poly_2d/: Cargo.toml
examples/poly_2d/src/: app.rs  main.rs  scene.rs
examples/rects/: Cargo.toml
examples/rects/src/: main.rs
examples/scenes/: Cargo.toml
examples/scenes/src/: app.rs  main.rs
examples/simple_3d/: Cargo.toml
examples/simple_3d/src/: app.rs  main.rs  scene.rs
examples/teapots/: Cargo.toml
examples/transparent/: Cargo.toml
examples/transparent_dice/: Cargo.toml
examples/web_wasm/: Cargo.toml  index.html
examples/web_wasm/src/: app.rs  lib.rs  scene.rs
misc/: bench.sh  dyn-texture-optimisation.md  engine-owns-scene.md  pages-index.html  renderer-improvements.md  scene-refactor.md  static-geometry-and-lighting.md  taxonomy.md  testing-spec.md  transparency.md  wasm-web-support.md
(+7 files in other folders)
