# Top level workspace config for main library and examples/test apps
[workspace]
members = [
  "argh",
  "examples/hello_world",
  "examples/poly_2d",
  "examples/simple_3d",
  "examples/teapots",
  "examples/web_wasm",
  "examples/scenes",
  "examples/obj_files",
]
resolver = "3"

[profile.dev]
opt-level = 0      # No optimizations (fastest compile time)
debug = true       # Keep debug symbols
incremental = true # Enable incremental compilation
