[package]
name = "web_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argh = { path = "../../argh", default-features = false, features = ["web"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.dev]
opt-level = 0      # No optimizations (fastest compile time)
debug = true       # Keep debug symbols
incremental = true # Enable incremental compilation
